Fix layout issues on smaller mobile screens and add play again animation

--- a/src/components/Game/Game.scss
+++ b/src/components/Game/Game.scss
@@ -2,8 +2,8 @@
 
 .game {  
   .choice-wrapper {
-    margin-top: 3.5rem;
-    transform: scale(0.75);
+    margin-top: 2rem;
+    transform: scale(0.7);
 
     .bg-img--pentagon {
       position: relative;
