--- a/src/components/ResultScreen/ResultScreen.scss
+++ b/src/components/ResultScreen/ResultScreen.scss
@@ -6,7 +6,7 @@
   
   display: flex;
   align-items: center;
-  margin-top: 2rem;
+  margin-top: 5%;
   
   .pick-wrapper {
     display: flex;
@@ -44,7 +44,8 @@
   &__box-wrapper {
     position: absolute;
     left: 50%;
-    bottom: 20%;
+    bottom: calc(100vh - 83%);;
+    width: 100%;
 
     #{$root}__box {
       display: flex;
@@ -74,7 +75,7 @@
         border: none;
         box-shadow: 0px 3px 5px 2px rgba(0, 0, 0, 0.25);
         transform: scale(0);
-        animation: popIn .3s 1.2s cubic-bezier(0.165, 0.840, 0.440, 1.000) forwards;
+        animation: popIn 0.3s 1.2s cubic-bezier(0.165, 0.84, 0.44, 1) forwards, jump .7s 2s ease-in-out infinite;
       }
     }
   }
