--- a/src/components/Rules/Rules.scss
+++ b/src/components/Rules/Rules.scss
@@ -12,7 +12,7 @@
   letter-spacing: 2px;
   line-height: 1;
   text-transform: uppercase;
-  margin: 0 auto 3rem auto;
+  margin: 0 auto 2rem auto;
   position: absolute;
   bottom: 0;
   left: 0;
@@ -20,7 +20,6 @@
   
   @media screen and (min-width: $desktop) {
     position: absolute;
-    margin-bottom: 2rem;
     margin-right: 2rem;
     right: 0;
     bottom: 0;
@@ -73,7 +72,7 @@
       }
 
       &__content {
-        margin: 6rem 0 1rem 0;
+        margin: 4rem 0 1rem 0;
       }
     }
   }
